Update contact email in terms of service

--- a/tos.html
+++ b/tos.html
@@ -24,6 +24,6 @@
   <p>We may update these terms at any time. Continued use implies acceptance of the updated terms.</p>
 
   <h2>6. Contact</h2>
-  <p>Questions? Contact: youremail@example.com</p>
+  <p>Questions? Contact: adhdcory@gmail.com</p>
 </body>
 </html>
